# smart_search_fino

./: .gitignore  Data_Gathering_notebook.ipynb  data_ingestion.py  experiment.ipynb  graph.ipynb  main.py  policy_details.jsonl  pyproject.toml  requirements.txt  retrivel_pipeline.ipynb  search.ipynb  to_update.txt  watcher.py  write.txt
agents/: comparison_agent.py  db_hooks.py  universal_naming_agent.py  universal_parser_agent.py
answering_agent/: answering_graph.py  caching_logic.py  db_ret.py  retrival_class.py
data/: embeddings_metadata.json  extraction_report.json  pinecone_vectors_structure.json
data/chunks/: attached_onappointmentofstatutoryauditors_1.json  bsbdapolicy_1.json  chequecollectionpolicy_1.json  citizenscharter_1.json  codeofbankscommittmenttocustomers_1.json  comprehensivedepositpolicy_7.json  customercompensationpolicy_1.json  customergrievancepolicy_1.json  customerservicepolicy_1.json  deceasedclaimsettlementpolicy_1.json  faq_section_1.0.json  kycamlcftpolicy_1.json  policyoncustomersuitabilityandappropriateness_1.json  privacy_formitraapplication_1.json  revisedkyc_wef2ndmay2023_1.json
data/raw/: fino_full_qa_dump.txt
graph/: graph.py  process_chunk_func.py  routing_after_parsing.py  routing_to_parsing.py
metadata/canonical/: fino_policies_metadata.json
output_texts/: annual_return_mgt_7_1_v1_extracted.txt
scripts/: data_ingestion.py
testing/: testing_query_rewrite.txt  true_query.txt
tests/: test_parser_agent.py
utils/: get_cross_encoder.py  get_embedd_model.py  get_llm.py  logger.py  queries.py  schema.py
(+4 files in other folders)
