[project]
name = "fino-smart-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "lxml>=6.0.2",
    "pip>=25.3",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "selenium>=4.39.0",
]
