[project]
name = "fino-smart-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "hf-xet>=1.2.0",
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "lxml>=6.0.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
    "pinecone>=8.0.0",
    "pip>=25.3",
    "psycopg2>=2.9.11",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "sentence-transformers>=5.2.0",
]
